--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <!-- Bootstrap 4.6.2 CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
   <!-- ESTILO CSS LOGIN -->
   <link rel="stylesheet" href="./assets/css/login_styles.css">
@@ -27,9 +27,9 @@
       <h2>Bienvenido a tu</h2>
       <h1 class="display-1">💰 Alke Wallet 💰</h1>
       <div class="container">
-        <a href="./indexv2.html">
-          <button class="endSession btn mt-4">Inicio</button>
-        </a>
+        <!-- <a href="./indexv2.html"> -->
+        <button class="endSession btn mt-4" id="btn-inicio">Inicio</button>
+        <!-- </a> -->
       </div>
     </div>
   </header>
