--- a/login.html
+++ b/login.html
@@ -69,7 +69,13 @@
 
     <div class="py-4 register container mx-auto">
       <p class="text-center">¿No tienes una cuenta? Entonces, regístrate</p>
-      <button class="btn btn-block" id="btn-register">Regístrate</button>
+
+      <!-- Button trigger modal -->
+      <button type="button" id="btn-register" class="btn btn-block" data-toggle="modal" data-target="#exampleModal">
+        Regístrate
+      </button>
+
+      <!-- <button class="btn btn-block" id="btn-register">Regístrate</button> -->
     </div>
 
     <div class="container">
@@ -85,11 +91,67 @@
   <footer>
     <p>© 2025 Alke Wallet - Jimena Mellado 🧚🏻‍♀️</p>
   </footer>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Formulario de registro</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="formModal">
+            <div class="mb-3">
+              <label for="name" class="form-label">Nombre:</label>
+              <input type="text" id="name" name="firstname" class="form-control" placeholder="Ingresa tu nombre"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="lastname" class="form-label">Apellidos:</label>
+              <input type="text" id="lastname" name="lastname" class="form-control" placeholder="Ingresa tus apellidos"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="idnumber" class="form-label">RUT:</label>
+              <input type="text" id="idnumber" name="idnumber" class="form-control" placeholder="Ingresa tu RUT"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" id="email" name="email" class="form-control" placeholder="mail@email.com" required>
+            </div>
+            <div class="mb-3">
+              <label for="bank" class="form-label">Contraseña:</label>
+              <input type="password" id="password" name="password" class="form-control" placeholder="****" required>
+            </div>
+            <div class="mb-5">
+              <label for="account" class="form-label">Confirmar contraseña</label>
+              <input type="password" id="confirmPass" name="confirmPass" class="form-control" placeholder="****"
+                required>
+            </div>
+            <div>
+              <button type="button" class="btn btn-group btn-secondary" data-dismiss="modal">Volver</button>
+            </div>
+            <div>
+              <button type="submit" class="btn btn-group btn-primary">Registrar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 <!-- JS JQUERY -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+<!-- JS BOOTSTRAP -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 <!-- INDEX JS -->
 <script src="./assets/js/login.js"></script>
