Mejoras en modal de registro

--- a/login.html
+++ b/login.html
@@ -138,6 +138,7 @@
             <div class="btn-group" id="btn-modal">
               <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
+            <!-- Prueba -->
           </form>
         </div>
       </div>
