Se añade modal en botón de Crear cuenta

--- a/indexv2.html
+++ b/indexv2.html
@@ -37,8 +37,13 @@
         <a href="./login.html" class="btn">Ingresa a tu cuenta</a>
       </div>
 
-      <div class="d-grid py-4">
-        <a href="./register.html" class="btn">Crea una cuenta</a>
+
+      <!-- Button trigger modal -->
+      <div class="d-grid pb-4">
+        <button type="button" id="btn-register" class="btn btn-block" data-bs-toggle="modal"
+          data-bs-target="#exampleModal">
+          Crea una cuenta
+        </button>
       </div>
 
     </div>
@@ -50,5 +55,65 @@
     <p>© 2025 Alke Wallet - Jimena Mellado 🧚🏻‍♀️</p>
   </footer>
 
+
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title fs-5" id="exampleModalLabel">Formulario de registro</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="formModal">
+            <div class="mb-3">
+              <label for="name" class="form-label">Nombre:</label>
+              <input type="text" id="name" name="firstname" class="form-control" placeholder="Ingresa tu nombre"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="lastname" class="form-label">Apellidos:</label>
+              <input type="text" id="lastname" name="lastname" class="form-control" placeholder="Ingresa tus apellidos"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="idnumber" class="form-label">RUT:</label>
+              <input type="text" id="idnumber" name="idnumber" class="form-control" placeholder="Ingresa tu RUT"
+                required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" id="email" name="email" class="form-control" placeholder="mail@email.com" required>
+            </div>
+            <div class="mb-3">
+              <label for="bank" class="form-label">Contraseña:</label>
+              <input type="password" id="password" name="password" class="form-control" placeholder="****" required>
+            </div>
+            <div class="mb-5">
+              <label for="account" class="form-label">Confirmar contraseña</label>
+              <input type="password" id="confirmPass" name="confirmPass" class="form-control" placeholder="****"
+                required>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+            </div>
+            <div class="btn-group" id="btn-modal">
+              <button type="submit" class="btn btn-primary">Registrar</button>
+            </div>
+            <!-- Prueba -->
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- JS de Bootstrap -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
 </body>
