Mejora en contenedor de alertas, texto alerta, tabla y footer

--- a/sendmoney.html
+++ b/sendmoney.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="contenedor-alertas" style="min-height: 20px;"></div>
+    <div id="contenedor-alertas" style="min-height: 1px;"></div>
     <header>
         <div>
             <h2>Bienvenido a tu</h2>
@@ -44,7 +44,7 @@
             <form id="formEnvio" class="border-rounded">
                 <div class=".container-sm bg-light">
                     <p class="pt-4">Selecciona un contacto:</p>
-                    <div class="table-responsive">
+                    <div class="table-responsive pl-2">
                         <table class="table table-light table-striped table-hover table-bordered table-sm">
                             <thead class="thead-light">
                                 <tr>
