Se añade animación a header

--- a/indexv2.html
+++ b/indexv2.html
@@ -20,13 +20,22 @@
   <link rel="stylesheet" href="./assets/css/index_stylesv2.css">
 </head>
 
-<body class="container-fluid col-12">
+<body>
 
   <header>
-    <div class="p-4">
+    <div class="p-4 .container-sm">
       <h2>Bienvenido a tu</h2>
-      <h1 class="display-1">💰 Alke Wallet 💰</h1>
+
+      <!--<h1 class="display-1">💰 Alke Wallet 💰</h1>
+     -->
+
+      <div class="masking-container">
+        <h1 class="masked-text text-center">Alke</h1>
+        <h1 class="masked-text text-center">Wallet</h1>
+      </div>
     </div>
+
+
   </header>
 
 
