Se añade animaciones al header

--- a/login.html
+++ b/login.html
@@ -27,7 +27,11 @@
   <header>
     <div>
       <h2>Bienvenido a tu</h2>
-      <h1 class="display-1 pb-4">💰 Alke Wallet 💰</h1>
+      <!-- <h1 class="display-1 pb-4">💰 Alke Wallet 💰</h1> -->
+      <div class="masking-container">
+        <h1 class="masked-text text-center">Alke Wallet</h1>
+      </div>
+    </div>
     </div>
   </header>
 
