--- a/deposit.html
+++ b/deposit.html
@@ -25,7 +25,10 @@
     <header>
         <div>
             <h2>Bienvenido a tu</h2>
-            <h1 class="display-1 pb-4">💰 Alke Wallet 💰</h1>
+            <!-- <h1 class="display-1 pb-4">💰 Alke Wallet 💰</h1> -->
+            <div class="masking-container">
+                <h1 class="masked-text text-center">Alke Wallet</h1>
+            </div>
 
         </div>
     </header>
